[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memorus"
version = "0.2.1"
description = "Intelligent memory engine for AI agents — mem0 fork with ACE layer"
readme = "README-zh.md"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
requires-python = ">=3.10"
authors = [{name = "TPY"}]
keywords = ["memory", "ai", "agent", "mem0", "knowledge-base"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "mem0ai>=1.0.0",
    "pydantic>=2.0",
    "click>=8.0",
]

[project.optional-dependencies]
onnx = ["onnxruntime>=1.16", "tokenizers>=0.15"]
graph = ["neo4j>=5.0"]
llm = ["litellm>=1.40"]
team = ["httpx>=0.25", "pyyaml>=6.0"]
mcp = ["mcp>=1.0"]
api = ["fastapi>=0.100", "uvicorn[standard]>=0.20"]
agents = ["openai-agents>=0.1"]
langchain = ["langchain-core>=0.2"]
# Native Rust backend (memorus-r). When installed, the package can select it via
# MEMORUS_BACKEND=rust. See doc/migration-rust-source-of-truth.md. Pure-Python
# engines remain the default until the cross-language parity gate is green.
rust = ["memorus-r>=0.1"]
all = ["memorus[onnx]", "memorus[graph]", "memorus[llm]", "memorus[team]", "memorus[mcp]", "memorus[api]"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-benchmark>=4.0",
    "mypy>=1.10",
    "ruff>=0.4",
    "build",
    "twine",
]

[project.scripts]
memorus = "memorus.core.cli.main:cli"
memorus-mcp = "memorus.ext.mcp_server:main"
memorus-api = "memorus.ext.rest_api:main"

[project.urls]
Homepage = "https://github.com/lurustech/lurus-memorus"
Documentation = "https://github.com/lurustech/lurus-memorus#readme"
Repository = "https://github.com/lurustech/lurus-memorus"
Issues = "https://github.com/lurustech/lurus-memorus/issues"
Changelog = "https://github.com/lurustech/lurus-memorus/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["memorus*"]
exclude = ["tests*", "docs*", "bmad*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["memorus"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
